# Algorithms-and-Data-structures-practice

./: README.md
Week1/: CMakeLists.txt  MyArray.cpp  MyArray.h  MyHashMap.cpp  MyHashMap.h  MyHeapAllocation.cpp  MyHeapAllocation.h  MyLinkedList.cpp  MyLinkedList.h  MyQueue.cpp  MyQueue.h  MyStack  MyStack.cpp  MyStack.h  Node.cpp  Node.h  test  test.cpp
Week10/: CMakeLists.txt  Week10.cpp
Week11/KDTree/: CMakeLists.txt
Week11/KDTree/KDTree/: CMakeLists.txt  main.cpp
Week11/KD_Tree/: CMakeLists.txt
Week11/KD_Tree/KD_Tree/: CMakeLists.txt  KDTree.cpp  main.cpp
Week11/KD_Tree/KD_Tree/include/: KDTree.h
Week2/: CMakeLists.txt  week2.cpp
Week3/: CMakeLists.txt  week3.cpp
Week4/: MyHash.cpp  MyHash.h
Week4/MyHashMap/: MyHashMap.sln
Week4/MyHashMap/MyHashMap/: MyHash.cpp  MyHash.h  MyHashMap.cpp  MyHashMap.h  MyHashMap.vcxproj  MyHashMap.vcxproj.filters  Node.cpp  Node.h  main.cpp
Week4/MyHashMap/MyHashMap/x64/Debug/: MyHashMap.exe.recipe  MyHashMap.ilk  vc143.idb
Week4/MyHashMap/MyHashMap/x64/Debug/MyHashMap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MyHashMap.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Week6/: BST.cpp  BST.h  Node.h  main.cpp
Week6, 7 and 8/: CMakeLists.txt  main.cpp
Week6, 7 and 8/BinaryTree/: CMakeLists.txt
Week6, 7 and 8/BinaryTree/BinaryTree/: BST.cpp  CMakeLists.txt  Node.h  main.cpp
Week9/QuadTree/: CMakeLists.txt
Week9/QuadTree/QuadTree/: CMakeLists.txt  QuadTree.cpp  Rectangle.cpp  main.cpp
Week9/QuadTree/QuadTree/include/: Point.h  QuadTree.h  Rectangle.h
